--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,13 @@
 #form, #form2{
-  background-color: blue;
+  /*background-color: blue;*/
+}
+
+h1{
+  text-align: center;
+}
+
+.alert{
+  text-align: center;
+  width: 50em;
+  margin: auto;
 }
