--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>The Wall</title>
-	<link rel="stylesheet" href="../static/bootstrap.min.css">
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 	<style type="text/css">
 		#comment {
 			margin-left: 20px;
@@ -10,8 +10,18 @@
 	</style>
 </head>
 <body>
-	Hello, {{session['username']}}
-	<a href="/logout">logout</a>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<p class="navbar-text navbar-left">Hello, {{session['username']}}</p>
+				<ul class="nav navbar-nav navbar-right pull-right">
+					<li>
+						<a href="/logout" class='btn btn-default nav-bar-btn-sm'>Logout <span class="glyphicon glyphicon-log-out"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<h1>The Wall</h1>
 	<form action='/post' method='post'>
 		<input type="hidden" name="message">
