--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,13 +1,35 @@
 #form, #form2{
   /*background-color: blue;*/
+  color: white;
+  background-color: #3a4f6b;
+  padding: 3em;
+  padding-top: 1em;
+  border-radius: .5em;
+  width: 25em;
+}
+
+body{
+  background-color: #bdc7e3;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%2322254d' fill-opacity='0.46'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 h1{
   text-align: center;
+  color: #454545;
+  font-weight: bold;
+  font-size: 7em
+}
+
+a{
+  color: orange;
+}
+
+a:hover{
+  color:white;
 }
 
 .alert{
   text-align: center;
-  width: 50em;
+  width: 55em;
   margin: auto;
 }
