--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,14 @@
 </head>
 <body>
 	<div class="header">
-		<h1>Welcome to the Wall</h1>
+		<h1>The Wall</h1>
 		{% with messages = get_flashed_messages() %}
 		{% if messages %}
 		{% for message in messages %}
 		<div class="alert alert-danger" role='alert'>
 			<p>{{message}}</p>
 		</div>
+		<br>
 		{% endfor %}
 		{% endif %}
 		{% endwith %}
@@ -27,25 +28,25 @@
 		<form action='/process' method='post' class='form-horizontal'>
 			<input type="hidden" name="register">
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for='name'>Username:</label>
 					<input type="text" class='form-control' name="username" id='name'>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for='email'>Email:</label>
 					<input type="text" class='form-control' name="email" id='email'>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for='pwd'>Password:</label>
 					<input type="password" class='form-control' name="password" id='pwd'>
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for='cpwd'>Confirm Password:</label>
 					<input type="password" class='form-control' name="c_password" id='cpwd'>
 				</div>
@@ -68,13 +69,13 @@
 		<form action='/process' method='post' class='form-horizontal'>
 			<input type="hidden" name="login">
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6" style="display:inline">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for="email_l">Email:</label>
 					<input type="text" class='form-control' name="email" id="email_l">
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="col-sm-6 col-md-6 col-lg-6" style="display:inline">
+				<div class="col-sm-12 col-md-12 col-lg-12">
 					<label for="pwd_l">Password:</label>
 					<input type="password" class='form-control' name="password" id='pwd_l'>
 				</div>
